infrix-macros/tests/trybuild/duplicate_shape.stderr
error: duplicate shape name: alpha
 --> tests/trybuild/duplicate_shape.rs:2:10
  |
2 | pub enum Shape {
  |          ^^^^^
